<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b>&lt;br />on your smartphone or computer&lt;br />and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ad">Qc</string>
    <string name="ad_duration_skippable" formatted="false">Qc · %ds · Có thể bỏ qua sau %ds</string>
    <string name="ad_duration_unskippable">Qc · %ds</string>
    <string name="ad_skip_preroll">Bỏ qua</string>
    <string name="ad_skip_welcome">Bỏ qua</string>
    <string name="album">Album</string>
    <string name="album_same_artist">Album cùng ca sĩ</string>
    <string name="album_same_creator">Playlist của %s</string>
    <string name="album_same_creator_if_blank">Cùng người tạo</string>
    <string name="album_subtitle" formatted="false">%s · %s</string>
    <string name="album_suggestions">Album tương tự</string>
    <string name="albums">Album</string>
    <string name="albums_playlists">Album &amp; Playlist</string>
    <string name="app_name">Zing MP3</string>
    <string name="artist">Ca sĩ</string>
    <string name="artist_birthday">Ngày sinh</string>
    <string name="artist_comment">Bình luận (%d)</string>
    <string name="artist_genre">Thể loại</string>
    <string name="artist_nationality">Quốc gia</string>
    <string name="artist_real_name">Tên thật</string>
    <string name="artists">Ca sĩ</string>
    <string name="back">Trở lại</string>
    <string name="balance">Balance</string>
    <string name="bass_boost">Bass boost</string>
    <string name="bs_add_to">Thêm vào danh sách</string>
    <string name="bs_add_to_favorites">Thêm vào yêu thích</string>
    <string name="bs_add_to_playlist">Thêm vào playlist</string>
    <string name="bs_delete">Xóa</string>
    <string name="bs_download">Tải về</string>
    <string name="bs_edit_playlist_info">Sửa tên playlist</string>
    <string name="bs_edit_playlist_song">Sửa danh sách playlist</string>
    <string name="bs_exclude">Ẩn</string>
    <string name="bs_include">Hiện</string>
    <string name="bs_np_more_equalizer">Equalizer</string>
    <string name="bs_np_more_info">Thông tin</string>
    <string name="bs_remove_from_favorites">Xóa khỏi yêu thích</string>
    <string name="bs_remove_from_history">Xóa khỏi lịch sử</string>
    <string name="bs_remove_from_playlist">Xóa khỏi playlist</string>
    <string name="bs_remove_from_restore">Xóa khỏi Khôi phục</string>
    <string name="bs_set_ringtone">Cài làm nhạc chuông</string>
    <string name="bs_share">Chia sẻ</string>
    <string name="bs_share_copy_link">Sao chép liên kết</string>
    <string name="floating_lyrics_display_mode_simple">Hiển thị rút gọn</string>
    <string name="floating_lyrics_show_in_app">Hiển thị ở ứng dụng</string>
    <string name="menu_add_to">Thêm vào</string>
    <string name="menu_close">Đóng</string>
    <string name="menu_copy_lyrics">Sao chép lời</string>
    <string name="menu_remove">Xóa</string>
    <string name="menu_remove_from_fav">Xóa khỏi Yêu thích</string>
    <string name="menu_select_all">Chọn/bỏ tất cả</string>
    <string name="menu_song_add_to_playlist">Thêm vào playlist</string>
    <string name="menu_song_download">Tải về</string>
    <string name="menu_song_enqueue">Thêm vào danh sách play</string>
    <string name="settings_appearance">Giao diện</string>
    <string name="settings_bluetooth">Bluetooth</string>
    <string name="settings_clear_history">Xóa lịch sử tìm kiếm</string>
    <string name="settings_continues_play_when_plug">Tiếp tục khi cắm tai nghe</string>
    <string name="settings_download">Download</string>
    <string name="settings_download_location">Vị trí lưu trữ</string>
    <string name="settings_download_quality">Chất lượng download</string>
    <string name="settings_fade_sound">To/nhỏ dần khi tiếp tục/dừng, chuyển bài</string>
    <string name="settings_headphone">Tai Nghe</string>
    <string name="settings_language">Ngôn ngữ</string>
    <string name="settings_lock_screem">Màn hình khóa</string>
    <string name="settings_music_quality">Chất lượng nghe nhạc</string>
    <string name="settings_off_bluetooth">Tắt để xử lý nhanh hơn</string>
    <string name="settings_off_to_save_battery">Tắt để tiết kiệm pin</string>
    <string name="settings_off_triple_tap">Tắt để xử lý play/pause nhanh hơn</string>
    <string name="settings_other">Khác</string>
    <string name="settings_player">Player</string>
    <string name="settings_push_notification">Thông báo đẩy</string>
    <string name="settings_shake_to_switch_song">Lắc để chuyển bài hát</string>
    <string name="settings_show_bluetooth_info">Hiển thị thông tin ở tai nghe bluetooth, màn hình khóa</string>
    <string name="settings_show_image_with_quaility_on_lock_screen">Hình chất lượng cao ở màn hình khóa</string>
    <string name="settings_sound">Âm thanh</string>
    <string name="settings_stop_sound_when_lost_focus">Dừng khi có âm thanh dài (Trình chơi nhạc khác…)</string>
    <string name="settings_stop_when_task_removed">Tắt nhạc khi bị xóa khỏi ứng dụng gần đây</string>
    <string name="settings_stop_when_unplug">Tạm dừng khi rút tai nghe</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_triple_tap_to_next_prev">Nhấn đúp/3 lần để next/previous</string>
    <string name="settings_video_quality">Chất lượng video</string>
    <string name="zalosdk_app_name" />
    <string name="zalosdk_cancel">Trở lại</string>
    <string name="zalosdk_close">Đóng</string>
    <string name="zalosdk_notification">Thông báo</string>
    <string name="zalosdk_processing">Đang xử lý</string>
</resources>