<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_add_to_playlist" android:id="@id/menu_add_to_playlist" android:orderInCategory="0" android:title="@string/menu_song_add_to_playlist" app:showAsAction="never" />
    <item android:icon="@drawable/ic_add_to_np" android:id="@id/menu_add_to_np" android:orderInCategory="0" android:title="@string/menu_add_to" app:showAsAction="always" />
    <item android:icon="@drawable/ic_download" android:id="@id/menu_download" android:orderInCategory="0" android:title="@string/menu_song_download" app:showAsAction="always" />
    <item android:icon="@drawable/ic_action_delete" android:id="@id/menu_remove" android:visible="false" android:orderInCategory="0" android:title="@string/menu_remove_from_fav" app:showAsAction="never" />
    <item android:icon="@drawable/ic_action_select_all" android:id="@id/menu_all" android:orderInCategory="0" android:title="@string/menu_select_all" app:showAsAction="never" />
</menu>