<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_action_select_all" android:id="@id/menu_all" android:orderInCategory="0" android:title="@string/menu_select_all" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_add_to_playlist" android:id="@id/menu_add_to_playlist" android:title="@string/menu_song_add_to_playlist" app:showAsAction="always" />
    <item android:icon="@drawable/ic_add_to_np" android:id="@id/menu_add_to_queue" android:title="@string/menu_song_enqueue" app:showAsAction="always" />
    <item android:icon="@drawable/ic_action_delete" android:id="@id/menu_remove" android:title="@string/menu_remove" app:showAsAction="always" />
</menu>