<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="240.0dip" android:layout_centerInParent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@id/text_title_alert" android:background="@drawable/zalosdk_border11" android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/zalosdk_notification" />
    <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/zalosdk_message_ctl" android:background="@color/zalosdk_white" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="75.0dip" android:text="@string/zalosdk_processing" />
    <ImageView android:id="@id/zalosdk_status_ctl" android:visibility="gone" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_margin="5.0dip" android:contentDescription="@string/zalosdk_app_name" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/zalosdk_cancel_ctl" android:background="@drawable/zalosdk_border07" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/zalosdk_cancel" android:layout_weight="1.0" />
        <View android:id="@id/button_devider" android:background="@color/zalosdk_white" android:visibility="gone" android:layout_width="2.0dip" android:layout_height="fill_parent" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/zalosdk_ok_ctl" android:background="@drawable/zalosdk_border07" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/zalosdk_close" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>